Add pagination close #6